[gd_scene load_steps=3 format=3 uid="uid://bfj4k8l9p2q5r"]

[ext_resource type="Script" path="res://src/scripts/ui/menus/main_menu.gd" id="1_main_menu"]
[ext_resource type="Script" path="res://src/scripts/ui/menus/menu_button.gd" id="2_menu_button"]

[node name="MainMenu" type="CanvasLayer"]
layer = 200
script = ExtResource("1_main_menu")

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackgroundRect" type="ColorRect" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.95)
mouse_filter = 2

[node name="MainPanel" type="Panel" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MainPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 30.0
offset_right = -40.0
offset_bottom = -30.0

[node name="TitleContainer" type="VBoxContainer" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="TitleLabel" type="Label" parent="MenuContainer/MainPanel/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Rando's Reservoir"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="MenuContainer/MainPanel/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "An Emotional Journey"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 40)

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Start Game"
script = ExtResource("2_menu_button")

[node name="Spacer2" type="Control" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="SettingsButton" type="Button" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"
script = ExtResource("2_menu_button")

[node name="Spacer3" type="Control" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 15)

[node name="QuitButton" type="Button" parent="MenuContainer/MainPanel/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit Game"
script = ExtResource("2_menu_button")

[node name="Spacer4" type="Control" parent="MenuContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 20)